--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                      <div class="box_bg">
                          <div class="box_bg_img">
-                             <figure><img src="images/tech.jpg"></figure>
+                             <figure><img src="images/tech.jpg" alt="#" /></figure>
                          </div>
                      </div>
                  </div>
