--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
                                 <div class="address">
                                     <h3>Quick links</h3>
                                     <ul class="Menu_footer">
-                                        <li class="active"> <img src="images/3.png" alt="#"> <a href="#games">Games</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#technology">Technology</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#features">Features</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#education">Education</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#contactus">Contact</a> </li>
+                                        <li class="active"> <img src="images/3.png" alt="#"> <a href="#games">Games</li></a>
+                                        <li><img src="images/3.png" alt="#"> <a href="#technology">Technology</li></a> 
+                                        <li><img src="images/3.png" alt="#"> <a href="#features">Features</li></a> 
+                                        <li><img src="images/3.png" alt="#"> <a href="#education">Education</li></a> 
+                                        <li><img src="images/3.png" alt="#"> <a href="#contactus">Contact</li></a> 
                                     </ul>
                                 </div>
                             </div>
