--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 <input class="contactus" placeholder="Email" type="text" name="Email">
                             </div>
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
+                                <textarea class="textarea" placeholder="Message" name="Message"></textarea>
                             </div>
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                                 <button class="send">Send</button>
