--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <!-- end contact -->
 
     <!--  footer -->
-    <footr>
+    <footer>
         <div class="footer ">
             <div class="container">
                 <div class="row">
@@ -389,7 +389,7 @@
                 </div>
             </div>
         </div>
-    </footr>
+    </footer>
     <!-- end footer -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
