--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
                             <div class=" col-lg-4 col-md-6 col-sm-6 ">
                                 <div class="address">
                                     <ul class="social_link">
-                                        <a href="#"><li><img src="icon/fb.png" alt="#"></li></a>
-                                        <a href="#"><li><img src="icon/tw.png" alt="#"></li></a>
-                                        <a href="#"><li><img src="icon/lin(2).png" alt="#"></li></a>
-                                        <a href="#"><li><img src="icon/instagram.png" alt="#"></li></a>
+                                        <li><a href="#"><img src="icon/fb.png" alt="#"></li></a>
+                                        <li><a href="#"><img src="icon/tw.png" alt="#"></li></a>
+                                        <li><a href="#"><img src="icon/lin(2).png" alt="#"></li></a>
+                                        <li><a href="#"><img src="icon/instagram.png" alt="#"></li></a>
                                     </ul>
                                     <a href="index.html"> <img src="images/gammod.png" alt="logo"></a>
                                 </div>
