--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                         <li><img src="images/3.png" alt="#"> <a href="#technology">Technology</a></li>
                                         <li><img src="images/3.png" alt="#"> <a href="#features">Features</a></li>
                                         <li><img src="images/3.png" alt="#"> <a href="#education">Education</a></li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#contactus">Contact</</a></li> 
+                                        <li><img src="images/3.png" alt="#"> <a href="#contactus">Contact</a></li> 
                                     </ul>
                                 </div>
                             </div>
