--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- end header inner -->
 
             <!-- end header -->
-            <section class="slider_section">
+            <div class="slider_section">
                 <div class="banner_main">
 
                     <div class="container-fluid">
